adding test posts, adding post file (no home link yet)

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 # General Stettings
-permalink: none
+permalink: /:categories/:year/:month/:day/:title
 
 # Template Variables
 title: 'Open Development Toolkit'
