--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -254,9 +254,9 @@
 
 - name: Organisation-ID-a-tron
   url: http://practicalparticipation.github.io/organisation-id-tool/
-  aim: to help publishers of data to the International Aid Transparency Initiative, and related standards, to identify the Organisation Identifier they should use, based on the draft Organisational Identifier Conventions.
+  aim: "To help publishers of data to the International Aid Transparency Initiative, and related standards, to identify the Organisation Identifier they should use, based on the draft Organisational Identifier Conventions."
   audience: IATI publishers 
-  tech: 
+  tech: unknown
   source: Partial list of prefixes maintained <a href="http://docs.google.com/a/okfn.org/spreadsheet/ccc?key=0AnWngmdQt3stdFppMWdkcXJqVTRWTk9menR1N0FXNGc/">here</a>
   github: https://github.com/practicalparticipation/organisation-id-tool/
   creator: Tim Davies
