Correct accreditation of IATID:FLOW

--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -189,7 +189,7 @@
   tech: 
   source: IATI registry
   github: 
-  creator: Aidan Berentsen (at UNOPS?)
+  creator: Aidan Berentsen
   wishlist:  
   status: beta
   documentation: 
