Adding information about IATI2LOD to tools

--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -148,7 +148,7 @@
   aim: "To show the added benefits of Linked Data by linking the IATI dataset to various other datasets such as World Bank indicators and DBPedia information"
   audience: 
   tech: 
-  source: 
+  source: IATI registry
   github: 
   creator: Kasper Brandt
   wishlist:  
