--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -229,28 +229,28 @@
   slug: open-aid-register
   url: http://openaidregister.org
   aim: To speed up the process of publishing to IATI; it helps NGOs easily convert aid data to IATI standard.
-  audience:  
+  audience: Non-profits or NGOs wanting to publish to IATI 
   tech:
   - CartoDB 
   source: 
   github: https://github.com/ruthdelcampo/OpenAidRegister
   creator: New York Law School project funded by the Fulbright Commission and the Government of Spain
   wishlist:  
-  status: 
+  status: Production
   documentation: 
 
 - name: Open Aid Search
   slug: open-aid-search
   url: http://www.openaidsearch.org/
-  aim: 
-  audience:  
+  aim: "Find any development aid activity around the world"
+  audience: Citizens
   tech: 
-  source: 
+  source: IATI registry
   github: 
-  creator: 
+  creator: "Zimmerman and Zimmerman, Akvo"
   wishlist:  
   status: 
-  documentation: 
+  documentation: Production
 
 - name: Open Aid Sweden
   slug: open-aid-sweden
