Remove info about Zimmerman and Zimmerman

--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -247,7 +247,7 @@
   tech: 
   source: IATI registry
   github: 
-  creator: "Zimmerman and Zimmerman, Akvo"
+  creator: 
   wishlist:  
   status: 
   documentation: Production
